--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'org.orchidmc'
-version = '2025.8.1.0-SNAPSHOT'
+version = '2025.8.1.0'
 
 repositories {
     mavenCentral()
